<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_onPrimary">


    <TextView
        android:id="@+id/scanner_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/wasterecord"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/wasterecord_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_information"
        android:textColor="@color/md_theme_light_secondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wasterecord_form_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wasterecord_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@color/md_theme_light_secondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wasterecord_form_qty_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/wasterecord_form_info_text"
        android:layout_width="370dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_main_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/wasterecord_form_qty_text"
        android:layout_width="98dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wasterecord_form_info_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_wasterecord_btn"
        android:layout_width="310dp"
        android:layout_height="68dp"
        android:layout_marginBottom="52dp"
        android:text="@string/create_wasterecord"
        android:textSize="18sp"
        android:windowSoftInputMode="adjustResize"
        app:backgroundTint="@color/md_theme_light_inversePrimary"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>